# rogue.city

./: CHANGELOG.md  CLAUDE.md  README.md  compass_artifact_wf-ca284809-b9b6-46e6-8ded-ad7b9498fd4b_text_markdown.md  main.py  pyproject.toml  requirements.txt  test_quest_system.py
areas/: area_ancient_ruins.py  area_forest_path.py  area_tutorial_cave.py  base_area.py  npc_system.py
characters/: __init__.py  alignment_manager.py  base_character.py  base_race.py  class_bard.py  class_druid.py  class_gypsy.py  class_knight.py  class_mage.py  class_missionary.py  class_mystic.py  class_necromancer.py  class_ninja.py  class_paladin.py  class_ranger.py  class_rogue.py  class_thief.py  class_warlock.py  class_warrior.py  class_witchhunter.py
core/: __init__.py  alignment_system.py  color_manager.py  combat_system.py  command_parser.py  conversation_engine.py  currency_system.py  dice_system.py  equipment_system.py  game_completion.py  game_engine.py  help_system.py  inventory_system.py  item_condition_system.py  item_factory.py  magic_command_system.py  magic_system.py  merchant_system.py  quest_manager.py  quest_rewards.py  quest_system.py  reputation_manager.py  save_manager.py  simple_ui_manager.py  skill_system.py  skill_system_backup.py  spell_system.py  stealth_system.py  timer_system.py  tutorial_system.py  ui_manager.py
enemies/: base_enemy.py  enemy_factory.py
items/: armor.py  base_item.py  consumables.py  weapons.py
npcs/: __init__.py  base_npc.py  citizen_npc.py  guard_npc.py  informant_npc.py  merchant_npc.py  quest_giver_npc.py
scripts/: lint_data.py  (+3 more)
(+74 files in other folders)
